# voice-tts

./: .env.example  .gitignore  README.md  pyproject.toml
.voice-tts/: feature.md  mechanism.md  roadmap.md  sprint.md  topology.md  voice-tts.md
.voice-tts/ref/: 01_voice-tts-deep-researtch-report.md
.voice-tts/ref/6-doc-stack/: feature.md  mechanism.md  odys.md  roadmap.md  sprint.md  topology.md
config/: model-profiles.example.json
src/voice_tts/: __init__.py  __main__.py  cli.py  exceptions.py
src/voice_tts/application/: __init__.py  dto.py  use_cases.py
src/voice_tts/bootstrap/: __init__.py  container.py  doctor.py
src/voice_tts/domain/: __init__.py  entities.py  ports.py  value_objects.py
src/voice_tts/infrastructure/: __init__.py  config.py  engines.py  gpt_sovits.py  logging.py  reference_audio.py  repositories.py  system.py  workspace.py
tests/: test_architecture.py  test_cli.py  test_engines.py  test_external_synthesis.py  test_reference_audio.py  test_repositories.py  test_settings.py  test_use_cases.py  test_workspace.py
